# courtwatch

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py  schedule_context.py  streamlit_app.py
backend/: __init__.py  config.py
backend/clients/: myvscloud_client.py
backend/db/: session.py
backend/models/: __init__.py  entities.py
backend/parsers/: result_parser.py  search_results_parser.py
backend/services/: analytics.py  bootstrap.py  persistence.py  reporting.py  scrape_service.py
docs/: CHROME_SESSION_FETCH.md  DASHBOARD_RUNBOOK.md  FETCHER_NOTES.md  PARSER_SPEC.md  PLAYWRIGHT_FETCH.md  PROJECT_HANDOFF.md  SMOKE_TEST.md  SOURCE_NOTES.md  SPEC.md  TASKS.md
exports/latest/: availability.csv  availability.json  metadata.json
ops/: ai.openclaw.court-watch-nightly.plist
scripts/: chrome_session_fetch.py  export_and_scp.sh  export_latest_dataset.py  ingest_chrome_capture.py  install_beerus_pubkey.sh  nightly_capture_and_report.py  playwright_fetch_results.py  run_scrape.py  setup_beerus_ssh_key.sh  smoke_test_fetch.py
tests/: test_bootstrap.py  test_chrome_session_url_builder.py  test_myvscloud_client.py  test_playwright_url_builder.py  test_reporting.py  test_result_parser.py  test_search_results_parser.py
tests/fixtures/: result_card_open_slot.html  search_results_page.html
