[project]
name = "court-watch"
version = "0.1.0"
description = "Arlington court reservation availability dashboard"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "streamlit>=1.56.0", 
  "sqlalchemy>=2.0.35",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.4.0",
  "requests>=2.32.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",
  "pandas>=2.2.3",
  "tenacity>=9.0.0",
  "playwright>=1.52.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
